modal bugfix and spacing h2

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -17,6 +17,7 @@ h1 {
 }
 
 h2 {
+    padding: 15px 0px 5px 0px;
     font-weight: 100;
     font-size: 14px;
     text-transform: uppercase;
